@@ -12,7 +12,7 @@ void
 testTortureExecute (void)
 {
 // Some ports do not support long long yet.
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   long long i = 1;
 
   i = i * 2 + 1;
